	  including a thumbnail in Finch.

	Pidgin:
	* Add support for the Gadu-Gadu protocol in the gevolution plugin to
	  provide Evolution integration with contacts with GG IDs. (#10709)
	* Remap the "Set User Mood" shortcut to Control-D, which does not
	  conflict with the previous shortcut for Get Buddy Info on the
	  selected buddy.

	Finch:
	* Add support for drop-down account options (like the SILC cipher
	  and HMAC options or the QQ protocol version).

	XMPP:
	* Unify the connection security-related settings into one dropdown.
	* Fix a crash when multiple accounts are simultaneously performing
	  SASL authentication when built with Cyrus SASL support.  (thanks
	  to Jan Kaluza) (#11560)
	* Restore the ability to connect to XMPP servers that do not offer
	  Stream ID. (#12331)

	Yahoo/Yahoo JAPAN:
	* Stop doing unnecessary lookups of certain alias information.  This
	  solves deadlocks when a given Yahoo account has a ridiculously large
	  (>500 buddies) list and may improve login speed for those on slow
	  connections. (#12532)

version 2.7.3 (08/10/2010):
	General:
	* Use silent build rules for automake >1.11. You can enable verbose
	  builds with the --disable-silent-rules configure option, or using
	  make V=1.

	libpurple:
	* Fix the TURN server settings (broken in 2.7.0).

	Pidgin:
	* Re-focus the input area after clicking the attention toolbar button.
	* Re-arrange media window to make it more netbook-friendly.

	Finch:
	* Rebindable 'suggest-next-page' and 'suggest-prev-page' actions for
	  textboxes (GntEntry) to scroll through list of suggestions.
	* Rebindable 'dropdown' action for comboboxes (GntComboBox) to show the
	  dropdown list of options.

	IRC:
	* Fix non-ASCII arguments to /mode et al.  (thanks to Max Ulidtko)

	MSN:
	* Support for web-based buddy icons, used when a buddy logs in to the
	  messenger on the Live website.
	* Fix file transfers with some clients that don't support direct